修改logout路由路径

--- a/md/NODEJS/珠峰博客.md
+++ b/md/NODEJS/珠峰博客.md
@@ -339,7 +339,7 @@ module.exports = router;
 - /users/login ：用户登录
 - /users/reg ：用户注册
 - /articles/post ：发表文章
-- /articles/logout ：登出 
+- /users/logout ：登出 
 
 ### 4.2 增加路由
 routes/users.js 中添加下列代码
