--- a/md/NODEJS/珠峰博客.md
+++ b/md/NODEJS/珠峰博客.md
@@ -579,7 +579,7 @@ name="email" id="email" placeholder="邮箱"/>
 </div>
 </div>
 <div class="form-group">
-<label for="password" class="col-sm-2 control-label">确认密码</label>
+<label for="password" class="col-sm-2 control-label">密码</label>
 <div class="input-group col-sm-10">
 <div class="input-group-addon">
 <span class="glyphicon glyphicon-lock"></span></div>
@@ -630,7 +630,7 @@ views/user/login.ejs
 </div>
 <div class="form-group">
 <label for="password" class="col-sm-2 control-label">
-确认密码</label>
+密码</label>
 <div class="input-group col-sm-10">
 <div class="input-group-addon">
 <span class="glyphicon glyphicon-lock"></span></div>
