Date.now添加小括号为:Date.now()

--- a/md/NODEJS/珠峰博客.md
+++ b/md/NODEJS/珠峰博客.md
@@ -725,7 +725,7 @@ Article: { 设置文章的数据模型
  user:{type:ObjectId,ref:'User'}, 用户
  title: String, 标题
  content: String, 内容
- createAt:{type: Date, default: Date.now} 创建时间
+ createAt:{type: Date, default: Date.now()} 创建时间
 }
 }
 ```
