--- a/md/NODEJS/珠峰爬虫.md
+++ b/md/NODEJS/珠峰爬虫.md
@@ -10,10 +10,14 @@
 ## 2. 预备知识
 ### 2.1 request
 一个简单的HTTP请求工具,用来获取网页内容
-```
+
+[request](https://www.npmjs.com/package/request)
+
+```javascript
 var request = require('request');
 var iconv = require('iconv-lite');
-request({url: 'http://top.baidu.com/category?c=10&fr=topindex', encoding: null},function(err,response,body){
+request({url: 'http://top.baidu.com/category?c=10&fr=topindex'
+, encoding: null},function(err,response,body){
     if(err)
         console.error(err);
     body = iconv.decode(body, 'gbk').toString();
@@ -24,9 +28,14 @@ request({url: 'http://top.baidu.com/category?c=10&fr=topindex', encoding: null},
 
 ### 2.2 cheerio
 在服务器端实现了jQuery中的DOM操作API 
-```
+
+[cheerio](https://www.npmjs.com/package/cheerio)
+
+```javascript
 var cheerio = require('cheerio');
-var $ = cheerio.load('<ul><li><a href="./buzz?b=353&c=10">玄幻奇幻</a></li><li><a href="./buzz?b=354&c=10">爱情</a></li></ul>');
+var $ = cheerio.load('<ul>
+<li><a href="./buzz?b=353&c=10">玄幻奇幻</a></li>
+\<li><a href="./buzz?b=354&c=10">爱情</a></li></ul>');
 $('ul li a').each(function () {
     var $me = $(this);
     var item = {
@@ -43,6 +52,9 @@ $('ul li a').each(function () {
 
 ### 2.3 cron
 用来周期性的执行某种任务或等待处理某些事件的一个守护进程 
+
+[cron](https://www.npmjs.com/package/cron)
+
 <img src="http://images.cnitblog.com/blog/34483/201301/08090352-4e0aa3fe4f404b3491df384758229be1.png" class="img-responsive">
 
 |符号|含义|
@@ -63,6 +75,9 @@ job1.start();
 
 ### 2.4 debug
 根据环境变量的有选择向控制台输出调试信息 
+
+[debug](https://www.npmjs.com/package/debug)
+
 ```
 var debug = require('debug')('crawler:main');
 //windows set DEBUG=crawler:*
@@ -72,7 +87,12 @@ debug('welcome to zhufengpeixun');
 
 ### 2.5 child_process
 child_process即子进程可以创建一个系统子进程并执行shell命令
-生成子进程的重要方法：child_process.spawn(cmd, args=[], [options])
+
+spawn语法
+```javascript
+child_process.spawn(cmd, args=[], [options])
+```
+示例
 ```javascript
 var url = require('url');
 var fs = require('fs');
@@ -101,10 +121,15 @@ var download_file_curl = function(file_url) {
     });
 };
 
-download_file_curl('http://d.hiphotos.baidu.com/zhidao/pic/item/d009b3de9c82d158274ed0c1810a19d8bd3e42f6.jpg');
+download_file_curl('http://pic.baidu.jpg');
 ```
 
-直接执行系统命令的重要方法：child_process.exec(cmd, [options], callback)
+exec语法
+```javascript
+child_process.exec(cmd, [options], callback)
+```
+示例
+
 ```javascript
 var url = require('url');
 var fs = require('fs');
@@ -115,16 +140,20 @@ var download_file_curl = function(file_url) {
     var file_name = url.parse(file_url).pathname.split('/').pop();
 
     // 使用exec执行curl命令
-    var child = exec('curl '+file_url+' -o '+DOWNLOAD_DIR+file_name, function(err, stdout, stderr) {
+    var child = exec('curl '+file_url+' -o '
+    +DOWNLOAD_DIR+file_name, function(err, stdout, stderr) {
         if (err) throw err;
         else console.log(file_name + ' downloaded to ' + DOWNLOAD_DIR);
     });
 };
-download_file_curl('http://d.hiphotos.baidu.com/zhidao/pic/item/d009b3de9c82d158274ed0c1810a19d8bd3e42f6.jpg');
+download_file_curl('http://pic.baidu.jpg');
 ```
 
 ### 2.6 async
 async是一个流程控制库,为我们带来了丰富的嵌套解决方案
+
+[async](https://www.npmjs.com/package/async)
+
 #### 2.6.1 串行执行
 串行执行一个函数数组中的每个函数
 series(tasks,callback);
@@ -188,8 +217,9 @@ async.auto({
     getFlour: function(callback){
         callback(null, 'Flour');
     },
-    mixFlour: ['getWater', 'getFlour', function(callback, results){//{ getWater: 'Water', getFlour: 'Flour' }
-        callback(null, results['getWater']+','+results['getFlour']+','+'mixFlour');
+    mixFlour: ['getWater', 'getFlour', function(callback, results){
+        callback(null, results['getWater']+','
+        +results['getFlour']+','+'mixFlour');
     }],
     steam: ['mixFlour', function(callback, results){
         callback(null, results['mixFlour']+',steam');
@@ -202,7 +232,7 @@ async.auto({
 
 #### 2.6.5 迭代多个异步任务
 所有的任务都迭代完成后才执行后续任务
-```
+```javascript
 var arr = [{name:'zfpx1'},{name:'zfpx2'}];
 async.forEach(arr, function(item, callback) {
     console.log('1.1 enter: ' + item.name);
@@ -214,3 +244,173 @@ async.forEach(arr, function(item, callback) {
     console.log('1.1 err: ' + err);
 });
 ```
+
+## 3.实现爬虫
+### 3.1 抓取内容
+#### 3.1.1 读取内容
+tasks/read.js
+```javascript
+var request = require('request');
+var cheerio = require('cheerio');
+var debug = require('debug')('crawler:read');
+var iconv = require('iconv-lite');
+module.exports =  function (url, callback) {
+    var items = [];
+    debug('读取电影列表');
+    request({url:url,encoding:null},function(err,response,body){
+        body = iconv.decode(body,'gbk');
+        var $ = cheerio.load(body);
+        $('.keyword .list-title').each(function(){
+            var that = $(this);
+            var item = {
+                name:that.text().trim(),
+                url:that.attr('href')
+            }
+            items.push(item);
+            debug('读取电影 ',item);
+        });
+        callback(null,items);
+        debug('读取电影列表完毕');
+    });
+}
+```
+
+#### 3.1.2 数据库操作
+model/index.js
+```
+var mongoose = require('mongoose');
+mongoose.connect('mongodb://123.57.143.189/zhufengcrawl');
+exports.Movie =  mongoose.model('Movie',new mongoose.Schema({
+    name:String,
+    url:String
+}));
+
+
+```
+#### 3.1.3 保存内容
+tasks/save.js
+```javascript
+var async = require('async');
+var Movie = require('../model').Movie;
+var debug = require('debug')('crawler:save');
+
+module.exports = function(items,callback){
+    async.series([
+       function(callback){
+           debug('清空电影列表');
+           Movie.remove({},callback);
+       },
+       function(callback){
+           debug('保存电影列表');
+           async.forEach(items, function (item, next) {
+               debug('保存电影 ',item);
+               Movie.create(item,next);
+           }, callback);
+       }
+    ],function(err,result){
+        debug('保存电影完毕');
+        callback();
+    })
+}
+```
+
+#### 3.1.4 入口文件
+tasks/main.js
+```javascript
+var read = require('./read');
+var save = require('./save');
+var async = require('async');
+var debug = require('debug')('crawler:main');
+debug('开始计划任务');
+var movies = [];
+async.series([
+    function(done){
+        read('http://top.baidu.com/buzz?b=26&c=1&fr=topcategory_c1',function(err,items){
+            movies = items;
+            done();
+        });
+    },
+    function(done){
+        save(movies,done);
+    }
+],function(err,result){
+    debug('结束计划任务');
+    process.exit(0);
+})
+```
+#### 3.1.5 计划任务
+app.js
+```javascript
+var spawn = require('child_process').spawn;
+var cronJob = require('cron').CronJob;
+var path = require('path');
+var job = new cronJob('* * * * * ',function(){
+    var update = spawn(process.execPath,[path.join(__dirname,'tasks/main.js')]);
+    update.stdout.pipe(process.stdout);
+    update.stderr.pipe(process.stderr);
+    update.on('close',function(code){
+        console.log(code);
+    });
+    update.on('error',function(code){
+        console.log(code);
+    });
+});
+job.start();
+```
+
+
+### 3.2 页面展示
+#### 3.2.1 启动应用
+app.js
+```javascript
+var express = require('express');
+var app = express();
+app.set('view engine', 'jade');
+app.set('views', 'views');
+var Movie = require('./model').Movie;
+app.get('/', function (req, res) {
+    Movie.find({}, function (err, movies) {
+        res.render('index', {
+            movies: movies
+        });
+    });
+});
+app.listen(9090);
+
+var spawn = require('child_process').spawn;
+var cronJob = require('cron').CronJob;
+var path = require('path');
+var job = new cronJob('* * * * * ',function(){
+    var update = spawn(process.execPath,[path.join(__dirname,'tasks/main.js')]);
+    update.stdout.pipe(process.stdout);
+    update.stderr.pipe(process.stderr);
+    update.on('close',function(code){
+        console.log(code);
+    });
+    update.on('error',function(code){
+        console.log(code);
+    });
+});
+job.start();
+```
+
+#### 3.2.2 编写模板
+```jade
+doctype html
+html
+    head
+        title 电影风云榜
+        link(rel="stylesheet",href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css")
+    body
+        .container
+            .panel.panel-primary
+                .panel-heading.text-center 电影风云榜
+                .panel-body
+                    ul.list-group
+                        each movie in movies
+                            li.list-group-item
+                                a(href="#{movie.url}")=movie.name
+```
+
+## 4. 资源
+[项目源码](https://github.com/zhufengnodejs/zhufengcrawl)
