--- a/md/NODEJS/珠峰爬虫.md
+++ b/md/NODEJS/珠峰爬虫.md
@@ -191,7 +191,7 @@ async.parallel([
 ```
 
 
-#### 2.6.3 并行执行
+#### 2.6.3 waterfall(瀑布)
 waterfall和series函数有很多相似之处，都是按顺序依次执行一组函数,不同之处是waterfall每个函数产生的值，都将传给下一个函数
 waterfall(tasks, [callback])
 ```javascript
