--- a/md/JAVASCRIPT/正则表达式.md
+++ b/md/JAVASCRIPT/正则表达式.md
@@ -108,6 +108,17 @@ RegExp('abc','img');
 |test|如果匹配返回true|/ab/.test('ab')|
 |toString|返回正则内容|/ab/.toString()|
 
+exec
+```javascript
+var str = "school school";
+var patt = new RegExp("school",'g');
+var result;
+while ((result = patt.exec(str)) != null)  {
+    console.log(result);
+    console.log(patt.lastIndex);
+}
+```
+
 ## 11.字符串的正则方法
 |方法|含义|示例|
 |:-----|:----|:----|
@@ -116,8 +127,21 @@ RegExp('abc','img');
 |match|匹配|'aabbbccbbb'.match(/b+/g) // |
 |split|分割字符串|'aabbbcc'.split(/b+/); // ["aa","cc"]|
 
+match
+```javascript
+var path = '/users/:id/:name';
+console.log(path.match(/:(\w+)/));
+console.log(path.match(/:(\w+)/g));
+```
+
+replace
+```javascript
+console.log('/users/:id/:name'.replace(/:\w+/g,'(\\w+)'));
+```
+
 ## 12.扩展阅读
 
 - [javascript正则表达式](http://www.cnblogs.com/rubylouvre/archive/2010/03/09/1681222.html)
 - [Regulex](https://jex.im/regulex)
 - [正则表达式可视化工具](https://regexper.com/)
+- [w3school](http://www.w3school.com.cn/jsref/jsref_obj_regexp.asp)
