--- a/md/NODEJS/珠峰博客.md
+++ b/md/NODEJS/珠峰博客.md
@@ -45,7 +45,7 @@ run the app:
 
 ```
 
-进入生成的目录并安装依赖   
+进入生成的目录并安装依赖
 ```javascript
 $ E:\>cd zhufengpeixunblog && npm install
 
@@ -122,16 +122,50 @@ Welcome to Express
 ```
 刚才我们就用express生成器生成了一个使用ejs模板的示例工程。
 
+### 1.3 debug
+debug模块
+```javascript
+var colors = require('colors');
+colors.setTheme({
+    name: 'cyan',
+    cost: 'green'
+});
+module.exports = function(name){
+   return function(msg){
+     var start = Date.now();
+     //判断环境变量中的DEUBG的值是是否匹配当前日志记录器的名称
+     var env = process.env.DEBUG;
+     env = env.replace('*','.*')
+     if(new RegExp(env).test(name)){
+         console.log(name.name,msg,('+'+(Date.now()-start)+'ms').cost);
+     }
+   }
+}
+```
+使用debug模块
+```javascript
+var debug = require('./debug');
+//生成一个日志记录器 名字叫warn'
+// set DEBUG=logger:*
+var logger_warn = debug('logger:warn');
+logger_warn('warn');
+
+//生成一个日志记录器 名字叫error
+var logger_error = debug('logger:error');
+logger_error('error');
+```
+
+
 ## 2. 项目文件分析
 
 ### 2.1 生成文件说明
 
-- **app.js**：express的主配置文件   
-- **package.json**：存储着工程的信息及模块依赖，当在 dependencies 中添加依赖的模块时，运行 `npm install`，npm 会检查当前目录下的 package.json，并自动安装所有指定的模块  
-- **node_modules**：存放 package.json 中安装的模块，当你在 package.json 添加依赖的模块并安装后，存放在这个文件夹下  
-- **public**：存放 image、css、js 等文件  
-- **routes**：存放路由文件  
-- **views**：存放视图文件或者说模版文件  
+- **app.js**：express的主配置文件
+- **package.json**：存储着工程的信息及模块依赖，当在 dependencies 中添加依赖的模块时，运行 `npm install`，npm 会检查当前目录下的 package.json，并自动安装所有指定的模块
+- **node_modules**：存放 package.json 中安装的模块，当你在 package.json 添加依赖的模块并安装后，存放在这个文件夹下
+- **public**：存放 image、css、js 等文件
+- **routes**：存放路由文件
+- **views**：存放视图文件或者说模版文件
 - **bin**：可执行文件，可以从此启动服务器
 
 ### 2.2 app.js
@@ -153,14 +187,14 @@ app.set('views', path.join(__dirname, 'views'));
 app.set('view engine', 'ejs'); 设置视图模板引擎为 ejs。
 
 //设置/public/favicon.ico为favicon图标
-//app.use(favicon(path.join(__dirname, 'public', 'favicon.ico'))); 
+//app.use(favicon(path.join(__dirname, 'public', 'favicon.ico')));
 app.use(logger('dev')); 加载日志中间件。
 app.use(bodyParser.json()); 加载解析json的中间件。
 //加载解析urlencoded请求体的中间件。
-app.use(bodyParser.urlencoded({ extended: false })); 
+app.use(bodyParser.urlencoded({ extended: false }));
 app.use(cookieParser()); 加载解析cookie的中间件。
 /设置public文件夹为存放静态文件的目录。
-app.use(express.static(path.join(__dirname, 'public'))); 
+app.use(express.static(path.join(__dirname, 'public')));
 
 app.use('/', routes); 根目录的路由
 app.use('/users', users); 用户路由
@@ -204,29 +238,29 @@ module.exports = app;  导出app供 bin/www 使用
 !/usr/bin/env node  表明是 node 可执行文件。
 
 //引入我们上面app.js导出的app实例
-var app = require('../app'); 
+var app = require('../app');
 //引入打印调试日志的debug模块，并设置名称。
-var debug = require('debug')('zhufengpeixunblog:server');  
-var http = require('http'); 
+var debug = require('debug')('zhufengpeixunblog:server');
+var http = require('http');
 
 //从环境变量中获取端口号并存放到express中
-var port = normalizePort(process.env.PORT || '3000'); 
+var port = normalizePort(process.env.PORT || '3000');
 //设置端口号
-app.set('port', port); 
+app.set('port', port);
 
 //创建http服务器
-var server = http.createServer(app); 
+var server = http.createServer(app);
 
 //在所有的网络接口中监听提供的端口
 server.listen(port);
 //监听错误事件
-server.on('error', onError); 
+server.on('error', onError);
 //启动工程并监听3000端口，成功后打印 。
-server.on('listening', onListening); 
+server.on('listening', onListening);
 //把一个端口处理成一个数字或字符串或者false
 function normalizePort(val) {
  //先试图转成10进制数字
-  var port = parseInt(val, 10); 
+  var port = parseInt(val, 10);
 
   if (isNaN(port)) {
 // 转不成数字就当作命名管道来处理
@@ -238,13 +272,13 @@ return val;
 return port;
   }
 //不是命名管道，也不是正常端口就返回false
-  return false; 
+  return false;
 }
 
 //服务器的错误事件监听器
 function onError(error) {
  //如果系统调用不是监听则抛出错误
-  if (error.syscall !== 'listen') { 
+  if (error.syscall !== 'listen') {
 throw error;
   }
   var bind = typeof port === 'string'
@@ -255,7 +289,7 @@ throw error;
   switch (error.code) { 错误编码
 case 'EACCES': 没有权限
   //没有权限绑定指定的端口
-  console.error(bind + ' requires elevated privileges'); 
+  console.error(bind + ' requires elevated privileges');
   process.exit(1); 异常退出
   break;
 case 'EADDRINUSE': 端口被占用
@@ -264,40 +298,40 @@ case 'EADDRINUSE': 端口被占用
   break;
 default:
 //其它的情况抛出错误并中止进程
-  throw error; 
+  throw error;
   }
 }
 
 //服务器的监听端口成功事件回调
 function onListening() {
 //取得服务器的地址
-  var addr = server.address(); 
+  var addr = server.address();
 //监听地址如果是字符串返回命名管道名，如果是数字返回端口
-  var bind = typeof addr === 'string' 
+  var bind = typeof addr === 'string'
 ? 'pipe ' + addr
 : 'port ' + addr.port;
 //记录日志
-  debug('Listening on ' + bind); 
+  debug('Listening on ' + bind);
 }
 ```
 
 ### 2.4 routes/index.js
 ```javascript
 //导入express模块
-var express = require('express'); 
+var express = require('express');
 //生成一个路由实例
-var router = express.Router(); 
+var router = express.Router();
 
 //当用户访问根目录也就是 / 的时候执行此回调
-router.get('/', function(req, res, next) { 
+router.get('/', function(req, res, next) {
 //渲染views/index.ejs模版并显示到浏览器中
-  res.render('index', { title: 'Express' }); 
+  res.render('index', { title: 'Express' });
 });
 //导出这个路由并在app.js中通过app.use('/', routes); 加载
-module.exports = router; 
+module.exports = router;
 ```
 
-### 2.5 views/index.ejs 
+### 2.5 views/index.ejs
 
 在渲染模板时我们传入了一个变量 title 值为 express 字符串，模板引擎会将所有 <%= title %> 替换为 express ，然后将渲染后生成的html显示到浏览器中
 ```html
@@ -334,15 +368,17 @@ module.exports = router;
 ## 4. 配置路由
 ### 4.1 路由规划
 我们已经把设计的构想图贴出来了，接下来的任务就是完成路由规划了。路由规划，或者说控制器规划是整个网站的骨架部分，因为它处于整个架构的枢纽位置，相当于各个接口之间的粘合剂，所以应该优先考虑。
+> 注意实现路由的时候为了避免出错，新增加的所有的路径、文件名约定都不要加`s`
 
 - / ：首页
-- /users/login ：用户登录
-- /users/reg ：用户注册
-- /articles/post ：发表文章
-- /users/logout ：登出 
+- /user/login ：用户登录
+- /user/reg ：用户注册
+- /user/logout ：登出
+- /article/post ：发表文章
+
 
 ### 4.2 增加路由
-routes/users.js 中添加下列代码
+routes/user.js 中添加下列代码
 ```javascript
 /**
  * 用户注册
@@ -387,8 +423,8 @@ router.post('/add', function (req, res) {
 ### 4.3 修改app.js
 app.js中添加以下代码
 ```javascript
-var articles = require('./routes/article');
-app.use('/articles', articles);
+var article = require('./routes/article');
+app.use('/article', article);
 ```
 ### 4.4 增加模板
 views下增加以下文件
@@ -407,15 +443,15 @@ views下增加以下文件
 
 ### 4.5 显示效果
 #### 4.5.1 用户注册
-<http://localhost:3000/users/reg>
+<http://localhost:3000/user/reg>
 
 <img src="http://7xjf2l.com2.z0.glb.qiniucdn.com/reg.jpg" class="img-responsive">
 #### 4.5.2 用户登陆
-<http://localhost:3000/users/login>
+<http://localhost:3000/user/login>
 
 <img src="http://7xjf2l.com2.z0.glb.qiniucdn.com/login.jpg" class="img-responsive">
 #### 4.5.3 发表文章
-<http://localhost:3000/articles/add>
+<http://localhost:3000/article/add>
 
 <img src="http://7xjf2l.com2.z0.glb.qiniucdn.com/articleadd.jpg" class="img-responsive">
 
@@ -464,7 +500,7 @@ E:\zhufengpeixunblog>bower init
 ```
 
 ### 5.3  创建配置文件 `.bowerrc`
-里面内容如下 
+里面内容如下
 ```
 {"directory":"./public/lib"}
 ```
@@ -508,7 +544,7 @@ jquery#2.1.4 public\lib\jquery
 <!--最左侧的，默认不可见 按钮标签里嵌套了三个span的icon。
 然后给与navbar-toggle样式类和属性collapse(收起)，
 点击的时候目标为data-target。当窗口缩小到一定程度，右侧的效果显现。-->
-<button type="button" class="navbar-toggle" 
+<button type="button" class="navbar-toggle"
 data-toggle="collapse" data-target="#menus">
 <span class="sr-only">珠峰博客</span>
 <span class="icon-bar"></span>
@@ -520,10 +556,10 @@ data-toggle="collapse" data-target="#menus">
 <!-- 放置其它的导航条 -->
 <div class="collapse navbar-collapse" id="menus">
 <ul class="nav navbar-nav">
-<li class="active"><a href="/users/reg">注册</a></li>
-<li><a href="/users/login">登录</a></li>
-<li><a href="/articles/add">发表文章</a></li>
-<li><a href="/users/logout">登出</a></li>
+<li class="active"><a href="/user/reg">注册</a></li>
+<li><a href="/user/login">登录</a></li>
+<li><a href="/article/add">发表文章</a></li>
+<li><a href="/user/logout">登出</a></li>
 </ul>
 </div>
 </nav>
@@ -551,20 +587,20 @@ views/index.ejs
 效果如下
 
  <img src="http://7xjf2l.com2.z0.glb.qiniucdn.com/homepage.jpg" class="img-responsive">
- 
+
 ### 6.5 修改用户注册页面
 views/user/reg.ejs
 ```html
    <% include ../include/header.ejs%>
 <div class="container">
-<form action="/users/reg" method="post"  role="form" 
+<form action="/user/reg" method="post"  role="form"
 class="form-horizontal">
 <div class="form-group">
 <label for="username" class="col-sm-2 control-label">用户名</label>
 <div class="input-group col-sm-10">
-<div class="input-group-addon"> 
+<div class="input-group-addon">
 <span class="glyphicon glyphicon-user"></span> </div>
-<input type="text" class="form-control" 
+<input type="text" class="form-control"
 id="username" name="username" placeholder="用户名"/>
 </div>
 
@@ -574,7 +610,7 @@ id="username" name="username" placeholder="用户名"/>
 <div class="input-group col-sm-10">
 <div class="input-group-addon">
 <span class="glyphicon glyphicon-envelope"></span></div>
-<input type="email" class="form-control" 
+<input type="email" class="form-control"
 name="email" id="email" placeholder="邮箱"/>
 </div>
 </div>
@@ -583,7 +619,7 @@ name="email" id="email" placeholder="邮箱"/>
 <div class="input-group col-sm-10">
 <div class="input-group-addon">
 <span class="glyphicon glyphicon-lock"></span></div>
-<input type="password" class="form-control" 
+<input type="password" class="form-control"
 name="password" id="password" placeholder="密码"/>
 </div>
 </div>
@@ -592,7 +628,7 @@ name="password" id="password" placeholder="密码"/>
 <div class="input-group col-sm-10">
 <div class="input-group-addon">
 <span class="glyphicon glyphicon-lock"></span></div>
-<input type="password" class="form-control" 
+<input type="password" class="form-control"
 name="repassword" id="repassword" placeholder="确认密码"/>
 </div>
 </div>
@@ -616,12 +652,12 @@ views/user/login.ejs
 ```html
    <% include ../include/header.ejs%>
 <div class="container">
-<form action="/users/login" method="post" 
+<form action="/user/login" method="post"
  role="form" class="form-horizontal">
 <div class="form-group">
 <label for="username" class="col-sm-2 control-label">用户名</label>
 <div class="input-group col-sm-10">
-<div class="input-group-addon"> 
+<div class="input-group-addon">
 <span class="glyphicon glyphicon-user"></span> </div>
 <input type="text" class="form-control"
  id="username" name="username" placeholder="用户名"/>
@@ -634,7 +670,7 @@ views/user/login.ejs
 <div class="input-group col-sm-10">
 <div class="input-group-addon">
 <span class="glyphicon glyphicon-lock"></span></div>
-<input type="password" class="form-control" 
+<input type="password" class="form-control"
 name="password" id="password" placeholder="密码"/>
 </div>
 </div>
@@ -658,7 +694,7 @@ views/article/add.ejs
 ```html
 <% include ../include/header.ejs%>
    <div class="container">
-   <form action="/articles/add" method="post"  
+   <form action="/article/add" method="post"
 role="form" class="form-horizontal">
    <div class="form-group">
    <label for="title" class="col-sm-2 control-label">标题</label>
@@ -670,7 +706,7 @@ role="form" class="form-horizontal">
    <div class="form-group">
    <label for="content" class="col-sm-2 control-label">正文</label>
    <div class="col-sm-10">
-   <textarea class="form-control"   id="" cols="30" rows="10" 
+   <textarea class="form-control"   id="" cols="30" rows="10"
 id="content" name="content" placeholder="请输入内容"></textarea>
    </div>
    </div>
@@ -700,59 +736,44 @@ $ npm install mongoose --save
 ```javascript
 module.exports = {
 cookieSecret:'zhufengkey', 用于 Cookie 加密与数据库无关
-db:'zhufengblog', 数据库的名称
-host:'123.57.143.189', 数据库的地址
-port:27017,  数据库的端口号
 url:"mongodb://123.57.143.189:27017/zhufengblog"
 }
 ```
 
 ### 7.3 创建db文件夹
-
-### 7.4 创建模型文件夹
-在db文件夹下创建文件`models.js`,此文件存放着所有的模型
-```javascript
-var mongoose = require('mongoose');
-var ObjectId = mongoose.Schema.Types.ObjectId;
-module.exports = {
-User:{ 设置User的数据模型 
- username:{type:String,required:true},用户名
- password:{type:String,required:true},密码
- email:{type:String,required:true},邮箱
- avatar:{type:String,required:true}头像
-},
-Article: { 设置文章的数据模型
- user:{type:ObjectId,ref:'User'}, 用户
- title: String, 标题
- content: String, 内容
- createAt:{type: Date, default: Date.now()} 创建时间
-}
-}
-```
-
-### 7.5 定义模型
-此文件负责向外暴露模型,因为Model赋给了global作为属性，那就意味着在程序任何地方都可以调用了
+在db文件夹下创建文件`index.js`,此文件存放着所有的模型
+此文件负责向外暴露模型,因为Model赋给了global作为属性，那就意味着只需要引入一次就可以在程序任何地方都可以调用了
 ```javascript
 var mongoose = require('mongoose'),
 Schema = mongoose.Schema,
 models = require('./models');
 var settings = require('../settings');
 mongoose.connect(settings.url);
-mongoose.model('User', new Schema(models.User));
-mongoose.model('Article', new Schema(models.Article));
-global.Model = function (type) {
-return mongoose.model(type);;
+mongoose.model('User', new Schema({
+  username:{type:String,required:true},用户名
+  password:{type:String,required:true},密码
+  email:{type:String,required:true},邮箱
+  avatar:{type:String,required:true}头像
+}));
+mongoose.model('Article', new Schema( {
+  user:{type:ObjectId,ref:'User'}, 用户
+  title: String, 标题
+  content: String, 内容
+  createAt:{type: Date, default: Date.now()} 创建时间
+}));
+global.Model = function (modelName) {
+ return mongoose.model(modelName);
 }
 ```
 
-### 7.6 在`app.js中`引入此模块
+### 7.4 在`app.js中`引入此模块
 ```javascript
   require('./db'); //导入db模块
 ```
 
 ## 8. 会话支持
 ### 8.1 安装会话支持模块
-使用 `express-session` 和 `connect-mongo` 模块实现了将会话信息存储到`mongodb`中。   
+使用 `express-session` 和 `connect-mongo` 模块实现了将会话信息存储到`mongodb`中。
 ```
 $ npm install express-session --save
 $ npm install connect-mongo --save
@@ -772,7 +793,7 @@ app.use(session({
   saveUninitialized:true,
  //设置它的 store 参数为 MongoStore 实例，把会话信息存储到数据库中，
  //以避免重启服务器时会话丢失
-  store: new MongoStore({ 
+  store: new MongoStore({
     db: settings.db,
     host: settings.host,
     port: settings.port,
@@ -791,27 +812,27 @@ function md5(val){
 ```
 
 ### 9.2 用户注册路由
-注册表单的form中`action="/users/reg"`,所以我们要实现用户注册的路由  
-修改 `routes/users.js` 
+注册表单的form中`action="/user/reg"`,所以我们要实现用户注册的路由
+修改 `routes/users.js`
 ```javascript
 router.post('/reg', function (req, res) {
   //就是 POST 请求信息解析过后的对象
   var user = req.body;//
   if(user.password != user.repassword){
       req.flash('error','两次输入的密码不一致');
-      return res.redirect('/users/reg');
+      return res.redirect('/user/reg');
   }
   //由于repassword不需要保存，所以可以删除
-  delete user.repassword; 
+  delete user.repassword;
   //对密码进行md5加密
-  user.password = md5(user.password); 
+  user.password = md5(user.password);
  //得到用户的头像
   user.avatar = "https://secure.gravatar.com/avatar/"
-+md5(user.email)+"?s=48"; 
++md5(user.email)+"?s=48";
   new Model('User')(user).save(function(err,user){
     if(err){
       req.flash('error',err);
-      return res.redirect('/users/reg');
+      return res.redirect('/user/reg');
   }
   //用户信息存入 session
   req.session.user = user;
@@ -829,7 +850,7 @@ router.post('/login', function (req, res) {
   Model('User').findOne(user,function(err,user){
      if(err){
        req.flash('error',err);
-       return res.redirect('/users/login');
+       return res.redirect('/user/login');
      }
     req.session.user = user;//用户信息存入 session
     res.redirect('/');//注册成功后返回主页
@@ -846,14 +867,14 @@ router.get('/logout', function (req, res) {
 ```
 
 ## 10. 发表文章路由
-发表文章表单的form中`action="/articles/add"`,所以我们要实现发表文章路由  
+发表文章表单的form中`action="/article/add"`,所以我们要实现发表文章路由
 修改 `routes/article.js` 中的 `post('/add')`
 ```javascript
 router.post('/add', function (req, res) {
   req.body.user = req.session.user._id;
   new Model('Article')(req.body).save(function(err,article){
   if(err){
-     return res.redirect('/articles/add');
+     return res.redirect('/article/add');
    }
  //发表文章成功后返回主页
   res.redirect('/');
@@ -887,7 +908,7 @@ router.post('/add', function (req, res) {
   new Model('Article')(req.body).save(function(err,article){
     if(err){
        req.flash('error', '更新文章失败!'); //放置失败信息
-       return res.redirect('/articles/add');
+       return res.redirect('/article/add');
     }
     req.flash('success', '更新文章成功!');  //放置成功信息
     res.redirect('/');//发表文章成功后返回主页
@@ -897,7 +918,7 @@ router.post('/add', function (req, res) {
 
 ### 11.5 增加显示提示的区域
 修改 views/include/header.ejs
-在最底部增加以下区域 
+在最底部增加以下区域
 ```html
 <div class="container text-center">
 <% if (success) { %>
@@ -928,37 +949,37 @@ app.use(function(req,res,next){
 <ul class="nav navbar-nav">
   <%
   if(!user){%>
-    <li class="active"><a href="/users/reg">注册</a></li>
-    <li><a href="/users/login">登录</a></li>
+    <li class="active"><a href="/user/reg">注册</a></li>
+    <li><a href="/user/login">登录</a></li>
   <%}else{
   %>
-    <li><a href="/articles/add">发表文章</a></li>
-    <li><a href="/users/logout">登出</a></li>
+    <li><a href="/article/add">发表文章</a></li>
+    <li><a href="/user/logout">登出</a></li>
   <%}%>
 </ul>
 ```
 用户登陆后显示发表文章和登出按钮，用户登陆前显示注册和登录按钮。
 
 ## 13 页面权限控制
-我们虽然已经完成了用户注册与登陆的功能，但并不能阻止比如已经登陆的用户访问 http://localhost:3000/users/reg 页面  
-为此，我们需要为页面设置访问权限。即注册和登陆页面应该阻止已登陆的用户访问  
-登出及后面我们将要实现的发表页只对已登录的用户开放   
-如何实现页面权限的控制呢？我们可以把用户登录状态的检查放到路由中间件中，在每个路径前增加路由中间件，即可实现页面权限控制  
-我们添加`checkNotLogin`和 `checkLogin`函数来实现这个功能  
+我们虽然已经完成了用户注册与登陆的功能，但并不能阻止比如已经登陆的用户访问 http://localhost:3000/user/reg 页面
+为此，我们需要为页面设置访问权限。即注册和登陆页面应该阻止已登陆的用户访问
+登出及后面我们将要实现的发表页只对已登录的用户开放
+如何实现页面权限的控制呢？我们可以把用户登录状态的检查放到路由中间件中，在每个路径前增加路由中间件，即可实现页面权限控制
+我们添加`checkNotLogin`和 `checkLogin`函数来实现这个功能
 
 ### 13.1  添加中间件
-添加middleware文件夹  
-在`middleware`下添加`index.js`文件  
-middleware/index.js  
+添加middleware文件夹
+在`middleware`下添加`index.js`文件
+middleware/index.js
 ```javascript
 exports.checkLogin = function(req, res, next) {
  if (!req.session.user) {
    req.flash('error', '未登录!');
-   return res.redirect('/users/login');
+   return res.redirect('/user/login');
  }
  next();
 }
- 
+
 exports.checkNotLogin = function(req, res, next) {
  if (req.session.user) {
    req.flash('error', '已登录!');
@@ -1001,7 +1022,7 @@ views/index.ejs
 </a>
    </div>
    <div class="media-body">
-<h4 class="media-heading"><a href="/articles/detail/<%=article._id%>">
+<h4 class="media-heading"><a href="/article/detail/<%=article._id%>">
 <%=article.title%></a></h4>
 <p class="media-left"><%- article.content%></p>
    </div>
@@ -1053,7 +1074,7 @@ router.get('/', function(req, res, next) {
 views/index.ejs
 ```javascript
 <h4 class="media-heading">
-<a href="/articles/detail/<%=article._id%>"><%=article.title%></a></h4>
+<a href="/article/detail/<%=article._id%>"><%=article.title%></a></h4>
 ```
 
 ### 16.2 修改路由
@@ -1080,9 +1101,9 @@ views/article/detail.ejs
       <%-article.content%>
    </div>
    <div class="panel-footer">
-      <a href="/articles/edit/<%=article._id%>" 
+      <a href="/article/edit/<%=article._id%>"
          class="btn btn-warning">编辑</a>
-       <a href="/articles/delete/<%=article._id%>"
+       <a href="/article/delete/<%=article._id%>"
          class="btn btn-danger">删除</a>
     </div>
  </div>
@@ -1093,7 +1114,7 @@ views/article/detail.ejs
 ### 17.1 修改详情页
 views/article/detail.ejs
 ```html
- <a href="/articles/delete/<%=article._id%>" 
+ <a href="/article/delete/<%=article._id%>"
    class="btn btn-danger">删除</a>
 ```
 ### 17.2 修改路由
@@ -1115,27 +1136,27 @@ router.get('/delete/:_id', function (req, res) {
 ### 18.1 修改详情页
 views/article/detail.ejs
 ```javascript
-<a href="/articles/edit/<%=article._id%>" class="btn btn-warning">编辑</a>
-   
+<a href="/article/edit/<%=article._id%>" class="btn btn-warning">编辑</a>
+
 ```
 
 ### 18.2 修改添加文章界面
 views/article/add.ejs
 ```html
-<form action="/articles/add" method="post"  role="form" 
+<form action="/article/add" method="post"  role="form"
 class="form-horizontal" enctype="multipart/form-data">
  <input type="hidden" value="<%=article._id%>" name="_id"/>
  <div class="form-group">
  <label for="title" class="col-sm-2 control-label">标题</label>
  <div class="col-sm-10">
- <input type="text" value="<%=article.title%>" class="form-control" 
+ <input type="text" value="<%=article.title%>" class="form-control"
 id="title" name="title" placeholder="标题"/>
  </div>
  </div>
  <div class="form-group">
  <label for="content" class="col-sm-2 control-label">正文</label>
  <div class="col-sm-10">
- <textarea class="form-control"   id="" cols="30" rows="10" id="content" 
+ <textarea class="form-control"   id="" cols="30" rows="10" id="content"
 name="content" placeholder="请输入内容" ><%=article.content%></textarea>
  </div>
  </div>
@@ -1182,7 +1203,7 @@ router.post('/add',middleware.checkLogin,upload.single('img'),
     new Model('Article')(req.body).save(function(err,article){
     if(err){
       req.flash('error',err);
-      return res.redirect('/articles/add');
+      return res.redirect('/article/add');
     }
     req.flash('success', '发表文章成功!');
     res.redirect('/');//注册成功后返回主页
@@ -1201,11 +1222,11 @@ router.get('/edit/:_id', function (req, res) {
 ### 19.1 在导航栏增加搜索框
 views/include/header.ejs
 ```javascript
-<form  class="navbar-form navbar-right" role="search" method="get" 
-action="/articles/list/1/2">
+<form  class="navbar-form navbar-right" role="search" method="get"
+action="/article/list/1/2">
   <div class="form-group">
     <label for="keyword">关键字</label>
-    <input type="text" name="keyword" id="keyword" 
+    <input type="text" name="keyword" id="keyword"
     class="form-control" value="<%=keyword%>"/>
   </div>
   <button type="submit" class="btn  btn-default" value="search"
@@ -1220,7 +1241,7 @@ views/index.ejs
   <%
   for(var i=1;i<=totalPage;i++){
   %>
-  <li><a href="/articles/list/<%=i%>/<%=pageSize%>?keyword=<%=keyword%>">
+  <li><a href="/article/list/<%=i%>/<%=pageSize%>?keyword=<%=keyword%>">
        <%=i%></a></li>
   <%
   }
@@ -1233,7 +1254,7 @@ views/index.ejs
 routes/index.js
 
 router.get('/', function(req, res, next) {
-  res.redirect('/articles/list/1/2');
+  res.redirect('/article/list/1/2');
 });
 ```
 
@@ -1254,7 +1275,7 @@ parseInt(req.params.pageSize):2;
   if(req.session.keyword){
     query['title'] = new RegExp(req.session.keyword,"i");
   }
-  
+
   Model('Article').count(query,function(err,count){
     Model('Article').find(query).sort({createAt:-1})
       .skip((pageNum-1)*pageSize)
@@ -1291,7 +1312,7 @@ views/article/detail.ejs
          <li class="media">
             <div class="media-left">
               <a href="#">
-                  <img class="media-object" 
+                  <img class="media-object"
                     src="<%=comment.user.avatar%>" alt="">
               </a>
             </div>
@@ -1312,10 +1333,10 @@ views/article/detail.ejs
 </div>
 
 <div class="panel panel-default">
-  <form action="/articles/comment" method="post">
+  <form action="/article/comment" method="post">
     <input type="hidden" value="<%=article._id%>" name="_id"/>
     <div class="panel-body">
-      <textarea class="form-control"   id="" cols="30" rows="10" 
+      <textarea class="form-control"   id="" cols="30" rows="10"
        id="content" name="content" placeholder="请输入评论" ></textarea>
     </div>
     <div class="panel-footer">
@@ -1325,7 +1346,7 @@ views/article/detail.ejs
 </div>
 ```
 
-### 20.2 修改模型   
+### 20.2 修改模型
 db/models.js
 ```javascript
  comments: [{user:{type:ObjectId,ref:'User'},content:String,
@@ -1383,7 +1404,7 @@ router.get('/detail/:_id', function (req, res) {
             req.flash('error', err);
             res.redirect('back');
         }
-        res.render('article/detail', 
+        res.render('article/detail',
        {title: '查看文章', article: result[0]});
     });
 });
@@ -1477,6 +1498,3 @@ https://www.heroku.com/
 
 [演示地址](https://zhufengpeixunblog.herokuapp.com)
 [项目源码](https://github.com/zhufengnodejs/zhufengpeixunblog)
-
-
-
