修改了珠峰博客一文中的两处笔误

--- a/md/NODEJS/珠峰博客.md
+++ b/md/NODEJS/珠峰博客.md
@@ -235,7 +235,7 @@ module.exports = app;  导出app供 bin/www 使用
 
 ### 2.3 bin/www
 ```javascript
-!/usr/bin/env node  表明是 node 可执行文件。
+#!/usr/bin/env node  表明是 node 可执行文件。
 
 //引入我们上面app.js导出的app实例
 var app = require('../app');
@@ -746,7 +746,7 @@ url:"mongodb://123.57.143.189:27017/zhufengblog"
 ```javascript
 var mongoose = require('mongoose'),
 Schema = mongoose.Schema,
-models = require('./models');
+
 var settings = require('../settings');
 mongoose.connect(settings.url);
 mongoose.model('User', new Schema({
