--- a/md/首页.md
+++ b/md/首页.md
@@ -1,55 +1,55 @@
 # git
-- [git入门](../../html/Git\git入门.html)
-- [webstorm安装与配置](../../html/工具\webstorm安装与配置.html)
+- [git入门](doc/html/Git\git入门.html)
+- [webstorm安装与配置](doc/html/工具\webstorm安装与配置.html)
 # node基础
-- [node安装与配置](../../html/node基础\node安装与配置.html)
-- [模块](../../html/node基础\模块.html)
-- [buffer](../../html/node基础\buffer.html)
-- [流](../../html/node基础\流.html)
-- [文件操作](../../html/node基础\文件操作.html)
-- [文件上传](../../html/node基础\文件上传.html)
+- [node安装与配置](doc/html/node基础\node安装与配置.html)
+- [模块](doc/html/node基础\模块.html)
+- [buffer](doc/html/node基础\buffer.html)
+- [流](doc/html/node基础\流.html)
+- [文件操作](doc/html/node基础\文件操作.html)
+- [文件上传](doc/html/node基础\文件上传.html)
 -
 # node进阶
-- [静态文件服务器](../../html/node进阶\静态文件服务器.html)
-- [动态服务器](../../html/node进阶\动态服务器.html)
-- [加密](../../html/node进阶\加密.html)
-- [压缩](../../html/node进阶\压缩.html)
-- [流高级](../../html/node进阶\流高级.html)
-- [Express](../../html/node进阶\Express.html)
-- [cookie](../../html/node进阶\cookie.html)
-- [session](../../html/node进阶\session.html)
-- [websocket](../../html/node进阶\websocket.html)
-- [socketio](../../html/node进阶\socketio.html)
+- [静态文件服务器](doc/html/node进阶\静态文件服务器.html)
+- [动态服务器](doc/html/node进阶\动态服务器.html)
+- [加密](doc/html/node进阶\加密.html)
+- [压缩](doc/html/node进阶\压缩.html)
+- [流高级](doc/html/node进阶\流高级.html)
+- [Express](doc/html/node进阶\Express.html)
+- [cookie](doc/html/node进阶\cookie.html)
+- [session](doc/html/node进阶\session.html)
+- [websocket](doc/html/node进阶\websocket.html)
+- [socketio](doc/html/node进阶\socketio.html)
 
 # node项目实战
-- [珠峰博客](../../html/node项目\珠峰博客.html)
-- [珠峰聊天室](../../html/node项目\珠峰聊天室.html)
-- [珠峰爬虫](../../html/node项目\珠峰爬虫.html)
+- [珠峰博客](doc/html/node项目\珠峰博客.html)
+- [珠峰聊天室](doc/html/node项目\珠峰聊天室.html)
+- [珠峰爬虫](doc/html/node项目\珠峰爬虫.html)
 
 # linux
-- [linux基础](../../html\服务器\linux基础.html)
+- [linux基础](doc/html\服务器\linux基础.html)
 - [linux布署](../html\服务器\linux布署.html)
 
 # angular
-- [angular入门](../../html/AngularJS\angular入门.html)
-- [angular基础](../../html/AngularJS\angular基础.html)
-- [服务](../../html/AngularJS\服务.html)
-- [指令](../../html/AngularJS\指令.html)
-- [route](../../html/AngularJS\route.html)
+- [angular入门](doc/html/AngularJS\angular入门.html)
+- [angular基础](doc/html/AngularJS\angular基础.html)
+- [服务](doc/html/AngularJS\服务.html)
+- [指令](doc/html/AngularJS\指令.html)
+- [route](doc/html/AngularJS\route.html)
 
 # vue
-- [Vue入门](../../html/vue\Vue入门.html)
-- [Vue方法篇](../../html/vue\Vue方法篇.html)
-- [Vue方法篇2](../../html/vue\Vue方法篇2.html)
-- [Vue组件](../../html/vue\Vue组件.html)
+- [Vue入门](doc/html/vue\Vue入门.html)
+- [Vue方法篇](doc/html/vue\Vue方法篇.html)
+- [Vue方法篇2](doc/html/vue\Vue方法篇2.html)
+- [Vue组件](doc/html/vue\Vue组件.html)
 
 # 自动化构建
-- [gulp](../../html\前端工程化\gulp.html)
-- [webpack](../../html\前端工程化\webpack.html)
+- [gulp](doc/html\前端工程化\gulp.html)
+- [webpack](doc/html\前端工程化\webpack.html)
 
 # react
-- [react入门](../../html\react\react入门.html)
-- [react基础应用](../../html\react\react基础应用.html)
-- [react-router](../../html\react\react-router.html)
-- [ReactNativeMac](../../html\react\ReactNativeMac.html)
-- [ReactNativeWin](../../html\react\ReactNativeWin.html)
+- [react入门](doc/html\react\react入门.html)
+- [react基础应用](doc/html\react\react基础应用.html)
+- [react-router](doc/html\react\react-router.html)
+- [ReactNativeMac](doc/html\react\ReactNativeMac.html)
+- [ReactNativeWin](doc/html\react\ReactNativeWin.html)
