--- a/md/首页.md
+++ b/md/首页.md
@@ -1,55 +1,58 @@
-# git
-- [git入门](doc/html/Git\git入门.html)
-- [webstorm安装与配置](doc/html/工具\webstorm安装与配置.html)
-# node基础
-- [node安装与配置](doc/html/node基础\node安装与配置.html)
-- [模块](doc/html/node基础\模块.html)
-- [buffer](doc/html/node基础\buffer.html)
-- [流](doc/html/node基础\流.html)
-- [文件操作](doc/html/node基础\文件操作.html)
-- [文件上传](doc/html/node基础\文件上传.html)
--
-# node进阶
-- [静态文件服务器](doc/html/node进阶\静态文件服务器.html)
-- [动态服务器](doc/html/node进阶\动态服务器.html)
-- [加密](doc/html/node进阶\加密.html)
-- [压缩](doc/html/node进阶\压缩.html)
-- [流高级](doc/html/node进阶\流高级.html)
-- [Express](doc/html/node进阶\Express.html)
-- [cookie](doc/html/node进阶\cookie.html)
-- [session](doc/html/node进阶\session.html)
-- [websocket](doc/html/node进阶\websocket.html)
-- [socketio](doc/html/node进阶\socketio.html)
+## 1.  git
+1. [git入门](doc/html/Git\git入门.html)
 
-# node项目实战
-- [珠峰博客](doc/html/node项目\珠峰博客.html)
-- [珠峰聊天室](doc/html/node项目\珠峰聊天室.html)
-- [珠峰爬虫](doc/html/node项目\珠峰爬虫.html)
+## 2. 工具
+1.  [webstorm安装与配置](doc/html/工具\webstorm安装与配置.html)
 
-# linux
-- [linux基础](doc/html\服务器\linux基础.html)
-- [linux布署](../html\服务器\linux布署.html)
+## 3. node基础
+1.  [node安装与配置](doc/html/node基础\node安装与配置.html)
+2.  [模块](doc/html/node基础\模块.html)
+3.  [buffer](doc/html/node基础\buffer.html)
+4.  [流](doc/html/node基础\流.html)
+5.  [文件操作](doc/html/node基础\文件操作.html)
+6.  [文件上传](doc/html/node基础\文件上传.html)
 
-# angular
-- [angular入门](doc/html/AngularJS\angular入门.html)
-- [angular基础](doc/html/AngularJS\angular基础.html)
-- [服务](doc/html/AngularJS\服务.html)
-- [指令](doc/html/AngularJS\指令.html)
-- [route](doc/html/AngularJS\route.html)
+## 4. node进阶
+1.  [静态文件服务器](doc/html/node进阶\静态文件服务器.html)
+2.  [动态服务器](doc/html/node进阶\动态服务器.html)
+3. [加密](doc/html/node进阶\加密.html)
+4.  [压缩](doc/html/node进阶\压缩.html)
+5.  [流高级](doc/html/node进阶\流高级.html)
+6.  [Express](doc/html/node进阶\Express.html)
+7.  [cookie](doc/html/node进阶\cookie.html)
+8.  [session](doc/html/node进阶\session.html)
+9.  [websocket](doc/html/node进阶\websocket.html)
+10.  [socketio](doc/html/node进阶\socketio.html)
 
-# vue
-- [Vue入门](doc/html/vue\Vue入门.html)
-- [Vue方法篇](doc/html/vue\Vue方法篇.html)
-- [Vue方法篇2](doc/html/vue\Vue方法篇2.html)
-- [Vue组件](doc/html/vue\Vue组件.html)
+## 5. node项目实战
+1.  [珠峰博客](doc/html/node项目\珠峰博客.html)
+2.  [珠峰聊天室](doc/html/node项目\珠峰聊天室.html)
+3.  [珠峰爬虫](doc/html/node项目\珠峰爬虫.html)
 
-# 自动化构建
-- [gulp](doc/html\前端工程化\gulp.html)
-- [webpack](doc/html\前端工程化\webpack.html)
+## 6. linux
+1.  [linux基础](doc/html\服务器\linux基础.html)
+2.  [linux布署](../html\服务器\linux布署.html)
 
-# react
-- [react入门](doc/html\react\react入门.html)
-- [react基础应用](doc/html\react\react基础应用.html)
-- [react-router](doc/html\react\react-router.html)
-- [ReactNativeMac](doc/html\react\ReactNativeMac.html)
-- [ReactNativeWin](doc/html\react\ReactNativeWin.html)
+## 7. angular
+1.  [angular入门](doc/html/AngularJS\angular入门.html)
+2.  [angular基础](doc/html/AngularJS\angular基础.html)
+3.  [服务](doc/html/AngularJS\服务.html)
+4.  [指令](doc/html/AngularJS\指令.html)
+5.  [route](doc/html/AngularJS\route.html)
+
+## 8. vue
+1.  [Vue入门](doc/html/vue\Vue入门.html)
+2.  [Vue方法篇](doc/html/vue\Vue方法篇.html)
+3.  [Vue方法篇2](doc/html/vue\Vue方法篇2.html)
+4.  [Vue组件](doc/html/vue\Vue组件.html)
+
+## 9. 自动化构建
+1.  [gulp](doc/html\前端工程化\gulp.html)
+2.  [webpack](doc/html\前端工程化\webpack.html)
+
+## 10. react
+1.  [react入门](doc/html\react\react入门.html)
+2.  [react基础应用](doc/html\react\react基础应用.html)
+3.  [react-router](doc/html\react\react-router.html)
+4.  [react-native-mac](doc/html\react\ReactNativeMac.html)
+5.  [react-native-win](doc/html\react\ReactNativeWin.html)
