--- a/md/node项目/珠峰爬虫.md
+++ b/md/node项目/珠峰爬虫.md
@@ -27,7 +27,7 @@ request({url: 'http://top.baidu.com/category?c=10&fr=topindex'
 ```
 
 ### 2.2 cheerio
-在服务器端实现了jQuery中的DOM操作API 
+在服务器端实现了jQuery中的DOM操作API
 
 [cheerio](https://www.npmjs.com/package/cheerio)
 
@@ -47,11 +47,11 @@ $('ul li a').each(function () {
         item.id = result[1];
     }
     console.log(item);
-}); 
+});
 ```
 
 ### 2.3 cron
-用来周期性的执行某种任务或等待处理某些事件的一个守护进程 
+用来周期性的执行某种任务或等待处理某些事件的一个守护进程
 
 [cron](https://www.npmjs.com/package/cron)
 
@@ -74,7 +74,7 @@ job1.start();
 
 
 ### 2.4 debug
-根据环境变量的有选择向控制台输出调试信息 
+根据环境变量的有选择向控制台输出调试信息
 
 [debug](https://www.npmjs.com/package/debug)
 
@@ -229,6 +229,7 @@ async.auto({
     console.log('results = ', results);
 });
 ```
+> 注意callback, results的顺序在不同的`async`版本中不一样
 
 #### 2.6.5 迭代多个异步任务
 所有的任务都迭代完成后才执行后续任务
