--- a/md/node进阶/压缩.md
+++ b/md/node进阶/压缩.md
@@ -8,17 +8,18 @@
 |方法|说明|
 |:----|:----|
 |zlib.createGzip|返回Gzip流对象，使用Gzip算法对数据进行压缩处理|
-|zlib.createGunzip|返回Gzip流对象，使用Gzip算法对数据进行压缩处理|
+|zlib.createGunzip|返回Gzip流对象，使用Gzip算法对压缩的数据进行解压缩处理|
 |zlib.createDeflate|返回Deflate流对象，使用Deflate算法对数据进行压缩处理|
-|zlib.createInflate|返回Deflate流对象，使用Deflate算法对数据进行压缩处理|
+|zlib.createInflate|返回Deflate流对象，使用Deflate算法对数据进行解压缩处理|
 
 ## 压缩和解压缩
+压缩
 ```javascript
 var zlib = require('zlib');
 var fs = require('fs');
 
 function zip(src) {
-    var gzip = zlib.createGzip();
+    var gzip = zlib.createGzip();//创建压缩流
     var inputStream = fs.createReadStream(src);
     var outputStream = fs.createWriteStream(src+'.gz');
     inputStream.pipe(gzip).pipe(outputStream);
