--- a/md/node进阶/加密.md
+++ b/md/node进阶/加密.md
@@ -1,19 +1,44 @@
-## crypto
+## 1. crypto
 `crypto`是`node.js`中实现加密和解密的模块
-在`node.js`中，使用`OpenSSL`类库作为内部实现加密解密的手段   
+在`node.js`中，使用`OpenSSL`类库作为内部实现加密解密的手段
 `OpenSSL`是一个经过严格测试的可靠的加密与解密算法的实现工具
 
-[windows版下载](http://dl.pconline.com.cn/download/355862-1.html)
+[windows版openSSL下载](http://dl.pconline.com.cn/download/355862-1.html)
 [代码](https://github.com/zhufengnodejs/static-server/tree/master/lesson/crypto)
 
 ## 散列(哈希)算法
-把任意长度的输入变换成固定长度的输出
+散列算法也叫哈希算法，用来把任意长度的输入变换成固定长度的输出,常见的有md5,sha1等
+- 相同的输入会产生相同的输出
+- 不同的输出会产生不同的输出
+- 任意的输入长度输出长度是相同的
+- 不能从输出推算出输入的值
+
+获取所有的散列算法
+```javascript
+console.log(crypto.getHashes());
+```
+
+散列算法示例
 ```javascript
 var crypto = require('crypto');
-var md5 = crypto.createHash('md5');
-var md5Sum = md5.update('hello');
-var result = md5Sum.digest('hex');
+var md5 = crypto.createHash('md5');//返回哈希算法
+var md5Sum = md5.update('hello');//指定要摘要的原始内容,可以在摘要被输出之前使用多次update方法来添加摘要内容
+var result = md5Sum.digest('hex');//摘要输出，在使用digest方法之后不能再向hash对象追加摘要内容。
 console.log(result);
+```
+
+多次update
+```javascript
+var fs = require('fs');
+var shasum = crypto.createHash('sha1');//返回sha1哈希算法
+var rs = fs.createReadStream('./readme.txt');
+rs.on('data', function (data) {
+    shasum.update(data);//指定要摘要的原始内容,可以在摘要被输出之前使用多次update方法来添加摘要内容
+});
+rs.on('end', function () {
+    var result = shasum.digest('hex');//摘要输出，在使用digest方法之后不能再向hash对象追加摘要内容。
+    console.log(result);
+})
 ```
 
 ## HMAC算法
@@ -32,29 +57,31 @@ console.log(result);
 
 
 ## 加密解密
-`Blowfish`算法是一种对称的分组加密算法
+`blowfish`算法是一种对称的加密算法,对称的意思就是加密和解密使用的是同一个密钥。
 ```javascript
 var crypto = require('crypto');
 var fs = require('fs');
 
 function cipher() {
-    var cipher = crypto.createCipher('blowfish', fs.readFileSync('key.pem', 'ascii'));
-    cipher.update('123456', 'utf8', 'hex');
-    return cipher.final('hex');
+    var cipher = crypto.createCipher('blowfish',
+    fs.readFileSync('key.pem', 'ascii'));//指定算法和密码
+    cipher.update('123456', 'utf8', 'hex');//指定要加密的内容
+    return cipher.final('hex');//输出加密后的结果
 }
 var result = cipher();
 console.log(result);
 
-var decipher = crypto.createDecipher('blowfish', fs.readFileSync('key.pem', 'ascii'));
-decipher.update(result, 'hex', 'utf8');
-var result = decipher.final('utf8');
+var decipher = crypto.createDecipher('blowfish',
+ fs.readFileSync('key.pem', 'ascii'));//指定算法和密码
+decipher.update(result, 'hex', 'utf8');//指定要解密的内容
+var result = decipher.final('utf8');//输出解密后的结果
 console.log(result);
 ```
 
-##非对称加密算法
-非对称加密算法需要两个密钥：公开密钥(publickey)和私有密钥(privatekey)  
-公开密钥与私有密钥是一对，如果用公开密钥对数据进行加密，只有用对应的私有密钥才能解密  
-因为加密和解密使用的是两个不同的密钥，所以这种算法叫作非对称加密算法  
+## 非对称加密算法
+非对称加密算法需要两个密钥：公开密钥(publickey)和私有密钥(privatekey)
+公开密钥与私有密钥是一对，如果用公开密钥对数据进行加密，只有用对应的私有密钥才能解密
+因为加密和解密使用的是两个不同的密钥，所以这种算法叫作非对称加密算法
 
 为私钥创建公钥
 ```
@@ -65,16 +92,17 @@ $ openssl req -key key.pem -new -x509 -out cert.pem
 var crypto = require('crypto');
 var fs = require('fs');
 var buffer = new Buffer('hello');
-var secret = crypto.publicEncrypt(fs.readFileSync('cert.pem').toString(), buffer);
-var result = crypto.privateDecrypt(fs.readFileSync('key.pem').toString(), secret);
+var secret = crypto.publicEncrypt(
+  fs.readFileSync('cert.pem').toString(), buffer);//使用公钥对数据进行加密
+var result = crypto.privateDecrypt(
+  fs.readFileSync('key.pem').toString(), secret);//使用私钥对数据进行解密
 console.log(result.toString());
 ```
 
 
 ## 签名
-在网络中，私钥的拥有者可以在一段数据被发送之前先对数据进行签名  
-在签名的过程中将对这段数据执行加密处理。  
-在经过加密后的数据发送之后，数据的接收者可以通过公钥的使用来对该签名进行解密及验证操作,以确保这段数据是私钥的拥有者所发出的原始数据，且在网络中的传输过程中未被修改。  
+在网络中，私钥的拥有者可以在一段数据被发送之前先对数据进行**签名**得到一个签名
+通过网络把此数据发送给数据接收者之后，数据的接收者可以通过**公钥**来对该签名进行验证,以确保这段数据是私钥的拥有者所发出的原始数据，且在网络中的传输过程中未被修改。
 
 ```javascript
 var crypto = require('crypto');
@@ -95,4 +123,3 @@ function verify() {
 }
 verify();
 ```
-
