--- a/md/node进阶/加密.md
+++ b/md/node进阶/加密.md
@@ -6,7 +6,7 @@
 [windows版openSSL下载](http://dl.pconline.com.cn/download/355862-1.html)
 [代码](https://github.com/zhufengnodejs/static-server/tree/master/lesson/crypto)
 
-## 散列(哈希)算法
+## 2. 散列(哈希)算法
 散列算法也叫哈希算法，用来把任意长度的输入变换成固定长度的输出,常见的有md5,sha1等
 - 相同的输入会产生相同的输出
 - 不同的输出会产生不同的输出
@@ -41,7 +41,7 @@ rs.on('end', function () {
 })
 ```
 
-## HMAC算法
+## 3. HMAC算法
 HMAC算法将散列算法与一个密钥结合在一起，以阻止对签名完整性的破坏
 生成私钥
 ```
@@ -56,7 +56,7 @@ console.log(result);
 ```
 
 
-## 加密解密
+## 4. 加密解密
 `blowfish`算法是一种对称的加密算法,对称的意思就是加密和解密使用的是同一个密钥。
 ```javascript
 var crypto = require('crypto');
@@ -78,7 +78,7 @@ var result = decipher.final('utf8');//输出解密后的结果
 console.log(result);
 ```
 
-## 非对称加密算法
+## 5. 非对称加密算法
 非对称加密算法需要两个密钥：公开密钥(publickey)和私有密钥(privatekey)
 公开密钥与私有密钥是一对，如果用公开密钥对数据进行加密，只有用对应的私有密钥才能解密
 因为加密和解密使用的是两个不同的密钥，所以这种算法叫作非对称加密算法
@@ -100,7 +100,7 @@ console.log(result.toString());
 ```
 
 
-## 签名
+## 6. 签名
 在网络中，私钥的拥有者可以在一段数据被发送之前先对数据进行**签名**得到一个签名
 通过网络把此数据发送给数据接收者之后，数据的接收者可以通过**公钥**来对该签名进行验证,以确保这段数据是私钥的拥有者所发出的原始数据，且在网络中的传输过程中未被修改。
 
