--- a/md/node进阶/压缩.md
+++ b/md/node进阶/压缩.md
@@ -1,8 +1,8 @@
-## 压缩与解压缩处理
+## 1. 压缩与解压缩处理
 可以使用`zlib`模块进行压缩及解压缩处理,压缩文件以后可以减少体积，加快传输速度和节约带宽
 [代码](https://github.com/zhufengnodejs/static-server/tree/master/lesson/zlib)
 
-## 压缩对象
+## 2. 压缩对象
 压缩和解压缩对象都是一个可读可写流
 
 |方法|说明|
@@ -12,8 +12,7 @@
 |zlib.createDeflate|返回Deflate流对象，使用Deflate算法对数据进行压缩处理|
 |zlib.createInflate|返回Deflate流对象，使用Deflate算法对数据进行解压缩处理|
 
-## 压缩和解压缩
-压缩
+## 3. 压缩和解压缩
 ```javascript
 var zlib = require('zlib');
 var fs = require('fs');
@@ -38,7 +37,7 @@ gunzip('source.txt.gz');
 
 ```
 
-## 在http中的应用
+## 4. 在http中的应用
 ```javascript
 var zlib = require('zlib');
 var fs = require('fs');
@@ -92,7 +91,7 @@ request.on('response', function (response) {
 request.end();
 ```
 
-## 方法调用
+## 5. 方法调用
 ```javascript
 var zlib = require('zlib');
 var fs = require('fs');
