--- a/md/JAVASCRIPT/缓存.md
+++ b/md/JAVASCRIPT/缓存.md
@@ -68,9 +68,12 @@ var eTagHandle = function(filename,req,res){
 ```javascript
 var expireHandler = function(filename,req,res){
     fs.readFile(filename,function(err,content){
-        var expires = new Date(new Date().getTime()+6000*1000);//设置缓存时间为10秒
-        res.setHeader('Expires',expires.toUTCString());//缓存过期的时间（绝对时间）
-        res.setHeader('Cache-Control','max-age=60');//多长时间后过期(单位是秒)，过期前不发请求 60秒之后缓存过期（相对时间）
+       //设置缓存时间为10秒
+        var expires = new Date(new Date().getTime()+6000*1000);
+        //缓存过期的时间（绝对时间）
+        res.setHeader('Expires',expires.toUTCString());
+        //多长时间后过期(单位是秒)，过期前不发请求 60秒之后缓存过期（相对时间）
+        res.setHeader('Cache-Control','max-age=60');
         res.writeHead(200,'OK');
         res.end(content);
     })
