--- a/md/JAVASCRIPT/缓存.md
+++ b/md/JAVASCRIPT/缓存.md
@@ -79,3 +79,7 @@ var expireHandler = function(filename,req,res){
     })
 }
 ```
+
+
+## 7. 资源
+[本节视频](http://yuntv.letv.com/bcloud.html?uu=zna4ig8gbr&vu=729caf0196&auto_play=1&width=640&height=360&lang=zh_CN)
