--- a/md/node课程/1.es6.md
+++ b/md/node课程/1.es6.md
@@ -71,7 +71,8 @@ console.log(str);
 
 </ul>
 <script>
-    var users = [{id:1,name:'zpfx1'},{id:2,name:'zpfx2'},{id:3,name:'zpfx3'}];
+    var users = [{id:1,name:'zpfx1'},{id:2,name:'zpfx2'}
+    ,{id:3,name:'zpfx3'}];
     //....
 </script>
 ```
@@ -88,7 +89,8 @@ console.log(str);
 ## 4. 函数
 ### 4.1 函数定义
 ES6允许使用“箭头”（=>）定义函数。
-箭头函数简化了函数的的定义方式，一般以 "=>" 操作符左边为输入的参数，而右边则是进行的操作以及返回的值`inputs=>output`
+箭头函数简化了函数的的定义方式，一般以 "=>" 操作符左边为输入的参数，
+而右边则是进行的操作以及返回的值`inputs=>output`
 ```javascript
 var double = v => v*2;
 ```
@@ -125,8 +127,10 @@ console.log(arr); //输出 1 3 5 6 8
 var person = {
     name:'zfpx',
     getName:function(){
-        setTimeout(function(){console.log(this);},1000); //在浏览器执行的话this指向window
-        setTimeout(() => console.log(this),1000);//在浏览器执行的话this指向person
+      //在浏览器执行的话this指向window
+        setTimeout(function(){console.log(this);},1000);
+        //在浏览器执行的话this指向person
+        setTimeout(() => console.log(this),1000);
     }
 }
 person.getName();
