--- a/md/node课程/3.gulp.md
+++ b/md/node课程/3.gulp.md
@@ -208,7 +208,8 @@ $    npm install gulp-minify-css --save-dev
 ```javascript
    var gulp = require('gulp');
     var less = require('gulp-less');
-    var minify = require('gulp-minify-css');//在文件的顶部去包含这个插件，起个名字，叫做 minify
+    //在文件的顶部去包含这个插件，起个名字，叫做 minify
+    var minify = require('gulp-minify-css');
     var rename = require('gulp-rename');
     gulp.task('minify',function(){
         return gulp.src('app/less/page.less')//指定 less文件
@@ -292,8 +293,9 @@ gulp.task('index', function () {
 });
   ```
 
-### 5.9 gulp-connect
-有些时候我们需要把文件放到本地服务器上去预览，gulp-connect可以帮我们创建一个本地服务器去运行我们的项目
+### 5.10 gulp-connect
+有些时候我们需要把文件放到本地服务器上去预览，
+gulp-connect可以帮我们创建一个本地服务器去运行我们的项目
 ```
      npm install gulp-connect --save-dev
 ```
@@ -307,11 +309,11 @@ gulp.task('index', function () {
            port:8080 //服务器的地址，没有此配置项默认也是 8080
        });
     });
-
-    gulp.task('default',['server']); //运行此任务的时候会在8080上启动服务器，
+   //运行此任务的时候会在8080上启动服务器，
+    gulp.task('default',['server']);
 ```
 
-### 5.10 自动刷新
+### 5.11 自动刷新
 我们希望当文件变化的时候浏览器可以自动刷新，这样我们就不需要文件修改后手动去刷新浏览器了
 ```javascript
     var gulp = require('gulp');
@@ -324,7 +326,8 @@ gulp.task('index', function () {
     });
 
     gulp.task('watch',function(){
-        gulp.watch('app/index.html',['copy-html']);//当index.html文件变化时执行copy-html任务
+      //当index.html文件变化时执行copy-html任务
+        gulp.watch('app/index.html',['copy-html']);
     });
 
     gulp.task('server',function(){
@@ -334,10 +337,11 @@ gulp.task('index', function () {
             livereload:true//启用实时刷新的功能
         });
     });
-    gulp.task('default',['server','watch']);//运行此任务的时候会在8080上启动服务器，
+    //运行此任务的时候会在8080上启动服务器，
+    gulp.task('default',['server','watch']);
 ```
 
-### 5.11  练习
+### 5.12  练习
 [源文件位置](https://github.com/zhufengnodejs/learngulp)
 -  js
     - 1.1 先合并src下所有的js文件为一个文件
@@ -357,5 +361,6 @@ gulp.task('index', function () {
     - 6.1   监控index.html源文件的变化，当它发生变化后自动执行html任务并自动刷新浏览器
 - default
 ```
-gulp.task('default', ['js', 'css', 'images', 'html', 'server', 'watch']);
+gulp.task('default', ['js', 'css', 'images',
+'html', 'server', 'watch']);
 ```
