--- a/md/node课程/2.babel.md
+++ b/md/node课程/2.babel.md
@@ -24,7 +24,6 @@ npm install --global babel-cli
 ```
 $ babel es6.js
 ```
-加上`-o`参数 可以将结果写入到指定的文件
 
 
 ## 配置 Babel
@@ -57,16 +56,22 @@ $ npm install --save-dev babel-preset-es2015
 
 ## babel-preset-stage-x ES7提案
 JavaScript还有一些提案还没有完全确定,分为5个阶段
-- Stage 0：strawman 稻草人   babel-preset-stage-0
+- Stage 0：strawman 稻草人
 在该阶段可以自由的使用任意方式提交推动ECMAScript发展的想法
-- Stage 1: proposal 提议 babel-preset-stage-1
+- Stage 1: proposal 提议
 阶段1是对所提交特性的正式建议。
 - Stage 2: draft 草案 babel-preset-stage-2
 阶段2是将会出现标准中的第一个版本。此时，将会与出现在标准中的最终特性是差不多的。
-- Stage 3: canidate 候选 babel-preset-stage-3
+- Stage 3: canidate 候选
 此时提议已经接近完成，只需要得到提议实现方的反馈，以及由用户来进一步推动。
 - Stage 4: finished 完成
 提议将被包括到标准之中。
+
+四个阶段对应的模块
+- babel-preset-stage-0
+- babel-preset-stage-1
+- babel-preset-stage-2
+- babel-preset-stage-3
 
 ### 安装依赖模块
 ```
