--- a/md/node课程/珠峰服务器布署.md
+++ b/md/node课程/珠峰服务器布署.md
@@ -56,3 +56,18 @@ http://work.zhufengpeixun.cn/stu83687401/iqiyi/view/index.html
 那么你需要通过xshell进入服务器并启动node服务，然后就可以通过ip:端口号来访问此服务 了
 
 [xshell使用教程](http://jingyan.baidu.com/article/295430f13fb4db0c7f005065.html)
+
+
+### 1.2.5 永久启动动态项目
+用 `node 脚本名.js`启用的服务会在连接窗口关闭后停止服务，如果要永久启动需要的话需要使用pm2
+```
+pm2 start 脚本名.js --name "zhufengnodejs-server"
+```
+停止服务可以使用
+```
+pm2 stop zhufengnodejs-server
+```
+重启服务可以使用
+```
+pm2 restart zhufengnodejs-server
+```
