--- a/md/node课程/4.gulp.md
+++ b/md/node课程/4.gulp.md
@@ -128,7 +128,29 @@ var gulp = require('gulp');
     gulp.task('default',['less']);
 ```
 
-### 5.3 gulp-concat
+### 5.3 gulp-load-plugins
+自动加载所有的插件
+```javascript
+module.exports = function () {
+    var $ = {};
+    var package = require('./package.json');
+    var devDependencies = package.devDependencies;
+    for (var attr in devDependencies) {//循环每个开发依赖
+        if (attr.startsWith('gulp-')) {//如果属性名是以gulp-开头的话,加载此模块并赋给$的属性  minifyHtml minify-html
+            $[toKey(attr)] = require(attr);
+        }
+    }
+    return $;
+}
+//把模块名转成属性名
+function toKey(attr) {
+    return attr.slice(5).replace(/-(\w)/g, function () {
+        return arguments[1].toUpperCase();
+    })
+}
+```
+
+### 5.4 gulp-concat
 这个插件可以把几个文件合并到一块
 ```
 $    npm install gulp-concat --save-dev
@@ -148,8 +170,9 @@ $    npm install gulp-concat --save-dev
 
   gulp.task('default',['concat']);
 ```
-### 5.4  gulp-uglify
+### 5.5  gulp-uglify
 合并后我们可以对JS文件进行压缩,最小化处理
+> 此插件并不能压缩es6代码，需要编译成es5再压缩
 ```
 $  npm install gulp-uglify --save-dev
 ```
@@ -171,7 +194,7 @@ $  npm install gulp-uglify --save-dev
     gulp.task('default',['uglify']);
 ```
 
-### 5.5  gulp-rename
+### 5.6  gulp-rename
 在把处理好的文件存放到指定的位置之前，我们可以先去重新命名一下它
 ```
 $ npm install gulp-rename --save-dev
@@ -200,7 +223,7 @@ $ npm install gulp-rename --save-dev
     gulp.task('default',['uglify']);
 ```
 
-### 5.6  gulp-minify-css
+### 5.7  gulp-minify-css
 压缩css
 ```
 $    npm install gulp-minify-css --save-dev
@@ -223,7 +246,7 @@ $    npm install gulp-minify-css --save-dev
     gulp.task('default',['less']);
 ```
 
-### 5.7  gulp-minify-html
+### 5.8  gulp-minify-html
 html文件压缩
 ```
 $ npm install gulp-minify-html --save-dev
@@ -240,7 +263,7 @@ $ npm install gulp-minify-html --save-dev
 ```
 
 
-### 5.8  gulp-inject
+### 5.9  gulp-inject
 动态自动插入生成后的js和css文件到html
  ```bash
  npm install --save-dev gulp-inject
@@ -268,14 +291,14 @@ var inject = require('gulp-inject');
 
 gulp.task('index', function () {
   var target = gulp.src('./src/index.html');
-  var sources = gulp.src(['./src/**/*.js', './src/**/*.css']);
-  return target.pipe(inject(sources))
-    .pipe(gulp.dest('./src'));
+  var sources = gulp.src(['build/**/*.js', 'build/**/*.css']);
+  return target.pipe(inject(sources,{ignorePath: 'build', addRootSlash: false}))
+    .pipe(gulp.dest('./build'));
 });
  ```
 
- ### 5.9  gulp-babel
-  可以使用此插件把es6的代码编译成es5的代码
+ ### 5.10  gulp-babel
+  可以使用此插件把es6的代码编译成es5的代码,plumber插件的作用是如果编译出错出并不会退出任务
   ```
   npm install gulp-babel gulp-plumber --save
   ```
@@ -293,7 +316,7 @@ gulp.task('index', function () {
 });
   ```
 
-### 5.10 gulp-connect
+### 5.11 gulp-connect
 有些时候我们需要把文件放到本地服务器上去预览，
 gulp-connect可以帮我们创建一个本地服务器去运行我们的项目
 ```
@@ -313,7 +336,7 @@ gulp-connect可以帮我们创建一个本地服务器去运行我们的项目
     gulp.task('default',['server']);
 ```
 
-### 5.11 自动刷新
+### 5.12 自动刷新
 我们希望当文件变化的时候浏览器可以自动刷新，这样我们就不需要文件修改后手动去刷新浏览器了
 ```javascript
     var gulp = require('gulp');
@@ -341,7 +364,7 @@ gulp-connect可以帮我们创建一个本地服务器去运行我们的项目
     gulp.task('default',['server','watch']);
 ```
 
-### 5.12  练习
+### 5.13  练习
 [源文件位置](https://github.com/zhufengnodejs/learngulp)
 -  js
     - 1.1 先合并src下所有的js文件为一个文件
