--- a/md/node课程/4.gulp.md
+++ b/md/node课程/4.gulp.md
@@ -223,22 +223,22 @@ $ npm install gulp-rename --save-dev
     gulp.task('default',['uglify']);
 ```
 
-### 5.7  gulp-minify-css
+### 5.7 gulp-clean-css
 压缩css
 ```
-$    npm install gulp-minify-css --save-dev
+$    npm install gulp-clean-css --save-dev
 ```
 ```javascript
    var gulp = require('gulp');
     var less = require('gulp-less');
     //在文件的顶部去包含这个插件，起个名字，叫做 minify
-    var minify = require('gulp-minify-css');
+    var cleanCss = require('gulp-minify-css');
     var rename = require('gulp-rename');
     gulp.task('minify',function(){
         return gulp.src('app/less/page.less')//指定 less文件
             .pipe(less())//把less编译成css
             .pipe(gulp.dest('dist/css'))//输出到目的地
-            .pipe(minify())//对 css再进行压缩
+            .pipe(cleanCss())//对 css再进行压缩
             .pipe(rename('page.min.css'))//重命名
             .pipe(gulp.dest('dist/css'));//输出到目的地
     });
